--- a/homepage/tutorial/Tutorial.module.css
+++ b/homepage/tutorial/Tutorial.module.css
@@ -1,56 +1,136 @@
-.Tutorial{
-    margin-top: 40px;
-    background-color: #fff;
-    width: 201vh;
-    height: 500px;
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+.Tutorial {
+  margin-top: 40px;
+  background-color: #fff;
+  width: 100%;
+  height: 90vh;
+}
+.h1 {
+  font-family: "Lato", sans-serif;
+  font-size: 1.8em;
+  font-weight: bold;
+  color: #1b4956;
+}
+.h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #1b4956;
 }
 
-.imagencontenedor{
-    margin-left: 35rem;
-    width: 462px;
-    height: 450px;
+.h3 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.75em;
+  color: #1b6872;
+}
+.contenedor {
+  margin-left: 35rem;
+  width: 45%;
+  height: auto;
+  margin-top: 2rem;
+}
+.icono {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+.textoIcono {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.botonesTutorial {
+  display: flex;
+  gap: 5px;
+  margin-top: 20px;
+}
+.botonregistrate,
+.botoninspirate {
+  width: 80%;
+  max-width: 250px;
+  height: auto;
+  padding: 0.5rem;
+  border-radius: 30px;
+  cursor: pointer;
+  border: 1px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.botonregistrate {
+  background-color: #8bc34a;
+  color: #fcfcfc;
+  border-color: #613030;
+}
+
+.botoninspirate {
+  background-color: #f7f4f2;
+  color: #306139;
+  border-color: #ff7d27;
+}
+
+.videocontenedor {
+  align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 40%;
+  margin-top: -288px;
+  margin-left: 30px;
+  padding: 5px;
+}
+.videocontenedor iframe {
+  width: 100%;
+  height: 50vh;
+}
+/* Breakpoints */
+
+@media (max-width: 1000px) {
+  .videocontenedor iframe {
+    width: 100%;
+    height: auto;
+  }
+  .contenedor {
+    margin-left: 25rem;
+    height: auto;
+    width: 30%;
     margin-top: 2rem;
+  }
+  .h1 {
+    font-family: "Lato", sans-serif;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #1b4956;
+  }
+  .h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 0.7em;
+    font-weight: bold;
+    color: #1b4956;
+  }
+  
+  .h3 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 0.4em;
+    color: #1b6872;
+  }
 }
 
-.botonregistrate{
-    background-color: #8BC34A;
-    color: #fcfcfc;
-    width: 250px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 7px;
-    margin-top: 20px;
-    border-radius: 30px;
-    cursor: pointer;
-    /* margin-left: 35rem;   */  
-    border: 1px solid #306139;
+@media (max-width: 800px) {
+  .videocontenedor iframe {
+    visibility: hidden;
+  }
+  .contenedor {
+    margin-right: -1rem;  
+    height: auto;
+    width: 30%;
+  }
 
 }
 
-.botoninspirate{
-    background-color: #f7f4f2;
-    color: #306139;
-    width: 250px;
-    height: 50px;
-    border-radius: 50%;
-    margin-left: 20rem;
-    padding: 7px;
-    border-radius: 30px;
-    cursor: pointer;
-    box-shadow: black;
-    margin-left: 1rem;  
-    margin-bottom: 10rem;
-    border: 1px solid #FF7D27;
-      
-}
-.imagencontenedor{
 
-    width: 530px;
-    height: 450px;
-}
-.videocontenedor{
 
-    width: 500px;
-    margin-top: -388px;
-    margin-left: 15px;
-}
